# Acid-CAN-IMU

./: .gitignore  .gitmodules  README.md
schematics/: BNO080Connect.kicad_sch  CANBusModule.kicad_sch  cangyro.kicad_pcb  cangyro.kicad_pro  cangyro.kicad_sch
software/: CMakeLists.txt  main.cpp
software/include/: BNO080.hpp  MCP2515.hpp  acid.hpp  orientation.hpp  pico.hpp  spi.hpp
software/src/: BNO080.cpp  MCP2515.cpp  acid.cpp  main.cpp  orientation.cpp  pico.cpp  spi.cpp
